# thrum

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: check.yml
src/: main.rs
src/app/: mod.rs  test.rs
src/config/: mod.rs  test.rs
src/imap/: mod.rs  test.rs
src/smtp/: mod.rs  test.rs
src/ui/: mod.rs  test.rs
