[package]
name = "thrum"
version = "0.0.5"
edition = "2024"
authors = ["whutchinson98"]
description = "A terminal email client"
license = "MIT"
repository = "https://github.com/whutchinson98/thrum"
homepage = "https://github.com/whutchinson98/thrum"
readme = "README.md"
keywords = ["email", "terminal", "tui", "mail", "client"]
categories = ["command-line-utilities", "email"]

[features]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
imap = "2.4"
imap-proto = "0.10"
native-tls = "0.2"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
thiserror = "2"
chrono = "0.4"
toml = "0.8"
tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
mockall = "0.13"
